feat: Add stylesheet to code

--- a/recipes/beef_stew.html
+++ b/recipes/beef_stew.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Beef Stew</h1>
@@ -27,6 +28,7 @@
         <li>1 cup fresh green beans, broken into 2 inch pieces</li>
         <li>1 pound cubed beef stew meat</li>
     </ul>
+    <h2>Directions</h2>
     <ol>
         <li>Place meat in slow cooker.</li>
         <li>In a small bowl mix together the flour, salt, and pepper; pour over meat, and stir to coat meat with flour mixture.</li>
