feat: Add some paddings and margins

--- a/recipes/chilli_topped.html
+++ b/recipes/chilli_topped.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chili-Topped Potato Soup</h1>
-    <img src="https://www.allrecipes.com/thmb/KoZ4YmcoJrBBnUXjmw5jMN-G_rQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4Chili-Topped-Potato-Soup-22b31bf974ad4e6ebd02a0263fb704f1.jpg" alt="Chili-Topped potato soup image">
+    <img src="https://www.allrecipes.com/thmb/KoZ4YmcoJrBBnUXjmw5jMN-G_rQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4Chili-Topped-Potato-Soup-22b31bf974ad4e6ebd02a0263fb704f1.jpg" alt="Chili-Topped potato soup image" class="recipes-image">
     <h2>Description</h2>
     <p>This is a delicious soup that I have made many times. Serve garnished with additional cilantro.</p>
     <h2>Ingredients</h2>
