--- a/recipes/coconut_curry.html
+++ b/recipes/coconut_curry.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Coconut Curry Butternut Squash Soup</h1>
-    <img src="https://www.allrecipes.com/thmb/LNyUar7IzoPI8Ey7MN-FyfuSZNM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4055079-42ad480d17f4481da47f3e8d17472a11.jpg" alt="coconut_curry image">
+    <img src="https://www.allrecipes.com/thmb/LNyUar7IzoPI8Ey7MN-FyfuSZNM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4055079-42ad480d17f4481da47f3e8d17472a11.jpg" alt="coconut_curry image" class="recipes-image">
     <h2>Description</h2>
     <p>This is a delicious soup that I have made many times. Serve garnished with additional cilantro.</p>
     <h2>Ingredients</h2>
