--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="recipes-links">
         <li><a href="recipes/coconut_curry.html">Coconut Curry Butternut Squash Soup</a></li>
         <li><a href="recipes/chilli_topped.html">Chilli-Topped Potato Soup</a></li>
         <li><a href="recipes/beef_stew.html">Beef Stew</a></li>
