--- a/recipes/beef_stew.html
+++ b/recipes/beef_stew.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Beef Stew</h1>
-    <img src="https://www.allrecipes.com/thmb/kUCe2EPPU2UQOrG-nQHTge33_Vs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ChristmasEveBeefStew___002-2000-fa0f682511364e49be9292f654af53aa.jpg" alt="Beef Stew Image">
+    <img src="https://www.allrecipes.com/thmb/kUCe2EPPU2UQOrG-nQHTge33_Vs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ChristmasEveBeefStew___002-2000-fa0f682511364e49be9292f654af53aa.jpg" alt="Beef Stew Image" class="recipes-image">
     <h2>Description</h2>
     <p>This is a family tradition for Christmas Eve! Serve with a green salad and a loaf of warm bread. It can also be made in a slow cooker.</p>
     <h2>Ingredients</h2>
